hphp/hack/test/typecheck/nonnull/mixed_is_not_subtype_of_nonnull.php.exp
File "mixed_is_not_subtype_of_nonnull.php", line 4, characters 10-11:
Invalid return type (Typing[4110])
File "mixed_is_not_subtype_of_nonnull.php", line 3, characters 23-29:
Expected nonnull
File "mixed_is_not_subtype_of_nonnull.php", line 3, characters 12-16:
But got mixed
