hphp/hack/test/typecheck/nonnull/mixed_is_not_subtype_of_nonnull.php
<?hh

function f(mixed $x): nonnull {
  return $x;
}
